# YARAify

./: Changelog  README.md  pyproject.toml  setup.py
yaraify/: __init__.py
